--- a/student.ipynb
+++ b/student.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "Author: Cristopher Delgado \n",
     "\n",
-    "Student Pace: self paced/flex \n",
+    "Student Pace: Self Paced/Flex \n",
     "\n",
     "Scheduled Project review date/time: TBD\n",
     "\n",
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project analyzes movie characteristics such as genres, return on investment (ROI), and popularity. The data analysis performed in this repository is based on datasets from [Box Office Mojo](https://www.boxofficemojo.com/), [IMDB](https://www.imdb.com/), [Rotten Tomatoes](https://www.rottentomatoes.com/), [TheMovieDB](https://www.themoviedb.org/), and [The Numbers](https://www.the-numbers.com/).  "
+    "This project analyzes movie characteristics such as genres, return on investment (ROI), and popularity. The data analysis performed in this repository is based on datasets from [Box Office Mojo](https://www.boxofficemojo.com/), [IMDB](https://www.imdb.com/), [Rotten Tomatoes](https://www.rottentomatoes.com/), [TheMovieDB](https://www.themoviedb.org/), and [The Numbers](https://www.the-numbers.com/). The main purpose of the data analysis is to provide Microsoft with 3 recommendations for there new movie production studio. "
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4     513900000  2010  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
    "metadata": {},
    "source": [
     "### IMDB \n",
-    "The dataset in correspondance to IMDB in the zipped Data folder is a database titled \"*im.db.zip*\". To deal with this dataset SQLite3 in addtion to Pandas must be used for exploratory analysis. The main tables of interest in this database are the movie_basics and movie_ratings tables. These tables contain movie charactertics and measureables for analysis. The other tables include information about the cast, writers, and directors for the movies. The below diagram shows the IMDB data. "
+    "The dataset in correspondence to IMDB in the zipped Data folder is a database titled \"*im.db.zip*\". To deal with this dataset SQLite3 in addtion to Pandas must be used for exploratory analysis. The main tables of interest in this database are the movie_basics and movie_ratings tables. These tables contain movie characteristics and measurables for analysis. The other tables include information about the cast, writers, and directors for the movies. The below diagram shows the IMDB data. "
    ]
   },
   {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "4            6.5       119  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,12 +418,12 @@
    "metadata": {},
    "source": [
     "### Rotten Tomatoes\n",
-    "The datasets in correspondance to Rotten Tomatoes in the zipped Data foler are \"*rt.movie_info.tsv.gz*\" and \"*rt.reviews.tsv.gz*\". Both files are Table Seperated Value files meaning a delimeter needs to be used to read the files using Pandas. We must also merge both datasets based on their 'id' column in order to explore the full contents of Rotten Tomatoes overall. The id referes to the review of the movie it was conducted on.  "
+    "The datasets in correspondance to Rotten Tomatoes in the zipped Data foler are \"*rt.movie_info.tsv.gz*\" and \"*rt.reviews.tsv.gz*\". Both files are Table Seperated Value files meaning a delimeter needs to be used to read the files using Pandas. We must also merge both datasets based on their 'id' column in order to explore the full contents of Rotten Tomatoes overall. The id refers to the review of the movie it was conducted on.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "4             NaN           0      Cinema Scope   October 12, 2017  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "4                                     Inception           8.3       22186  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
        "4      $317,000,000   $620,181,382  $1,316,721,747  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1160,7 @@
        "[73052 rows x 6 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
        "318              NaN           0               Film4    August 12, 2008  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1641,7 @@
        "318   fresh              NaN           0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1821,7 @@
        "726  fresh  Debbie Baldwin           0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
        "49919     March 27, 2009  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2091,14 +2091,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nan, 'PG-13', 'PG', 'G', 'R']\n",
+      "[nan, 'PG-13', 'G', 'R', 'PG']\n",
       "rating_x\n",
       "G        2.284580e+07\n",
       "PG       5.045734e+07\n",
@@ -2135,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,12 +2158,12 @@
    "metadata": {},
    "source": [
     "#### TMDB\n",
-    "> As mentioned previously the genre_ids column in the TMDB data are just numbers. We can retriev the defintions of those numbers using an API from TMDB that contains those definitions."
+    "As mentioned previously the genre_ids column in the TMDB data are just numbers. We can retrieve the defintion of those numbers using an API from TMDB that contains those definitions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,12 +2220,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The column that contains the genre ids represents itself in the dataframe as a list containig multiple strings. The reality is that it is actually a single string. The next step would be to parse the string so we can seperate the id numbers and retrieve the corresponding genre."
+    "> The column that contains the genre ids represents itself in the dataframe as a list containing multiple strings. The reality is that it is actually a single string. The next step would be to parse the string so we can separate the id numbers and retrieve the corresponding genre."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2361,7 @@
        "4       22186  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2506,7 +2506,7 @@
        "4                                     Inception           8.3       22186  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2535,7 +2535,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,12 +2551,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The next step to anlyze the genre column would be to seperate the genres into rows. This would allow us to analyze the specific genres."
+    "> The next step to analyze the genre column would be to separate the genres into rows. This would allow us to analyze the specific genres."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2566,7 +2566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2603,12 +2603,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Extract the realease dates from the release date column. Using datetime format the month can be extracted and used for analysis. "
+    "> Extract the release dates from the release date column. Using datetime format the month can be extracted and used for analysis. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
        "[5782 rows x 7 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
        "[5782 rows x 4 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2962,18 +2962,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\delga\\AppData\\Local\\Temp\\ipykernel_40884\\484379681.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\delga\\AppData\\Local\\Temp\\ipykernel_24708\\484379681.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  tn_movie_copy['production_budget'] = pd.to_numeric(tn_movie_copy['production_budget'].str.replace('[^\\d.]', ''), errors='coerce')\n",
-      "C:\\Users\\delga\\AppData\\Local\\Temp\\ipykernel_40884\\484379681.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\delga\\AppData\\Local\\Temp\\ipykernel_24708\\484379681.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  tn_movie_copy['domestic_gross'] = pd.to_numeric(tn_movie_copy['domestic_gross'].str.replace('[^\\d.]', ''), errors='coerce')\n",
-      "C:\\Users\\delga\\AppData\\Local\\Temp\\ipykernel_40884\\484379681.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\delga\\AppData\\Local\\Temp\\ipykernel_24708\\484379681.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  tn_movie_copy['worldwide_gross'] = pd.to_numeric(tn_movie_copy['worldwide_gross'].str.replace('[^\\d.]', ''), errors='coerce')\n"
      ]
     },
@@ -3104,7 +3104,7 @@
        "[5782 rows x 4 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3127,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3294,7 +3294,7 @@
        "[5782 rows x 6 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3308,7 +3308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3338,7 +3338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3374,7 +3374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3410,7 +3410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3445,7 +3445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3505,7 +3505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3535,7 +3535,7 @@
    "metadata": {},
    "source": [
     "## Conclusions\n",
-    "This analysis has lead to three recommendations for Microsofts's new movie production studio:\n",
+    "This analysis has lead to three recommendations for Microsoft's new movie production studio:\n",
     "\n",
     "- **Make movies with the following genres: Western, Romance, History, Animation, Family, Mystery, Thriller, Science Fiction, War, Crime, Fantasy, Action, Adventure.** These genres had a popularity score of 40 percent or higher which according to TMDB is considered good through excellent. \n",
     "- **Make movies with the intended Audience of PG-13 and PG.** These intended audience ratings proved to have the higher box office sales in comparison to rated R and G movies. \n",
